@@ -1,5 +1,12 @@
 2002-12-08  Paul Brook  <paul@nowt.org>
 
+	* trans-array.c (g95_put_offset_into_var): New function.
+	(g95_trans_array_constructor_subarray): New function.
+	(g95_trans_array_constructor_value): Use it.
+	(g95_array_cons_size): Don't abort() on array components.
+
+2002-12-08  Paul Brook  <paul@nowt.org>
+
 	* Make-lang.in (F95_ADDITIONAL_OBJS): Remove tree-dchain.o.
 	* support.c: Update #includes.
 	(statement_code_p, c_size_in_bytes, s_size_type_node): Remove.
